# Colonist

./: .breakpoints  .gitignore  Database.py  LICENCE  README.md  colonist.py  deneme.py  deneme.txt  dosya.txt  keep_alive.py  main.py  pyproject.toml  test2.py  test3.py
Files/: embedDictionary.py  infoMessage.py  levels.py  openShips.py  ships.py
cogs/: abilityTree.py  addLink.py  addPointToSpaceShip.py  clear.py  createRole.py  createSpaceShip.py  deleteLink.py  destroySpaceShip.py  help.py  information.py  instagram.py  level.py  modifier.py  onMemberJoin.py  onMessage.py  onRawReactionRemove.py  onReactionAdd.py  onVoiceStateUpdate.py  personalPoint.py  rank.py  showLinks.py  voiceChannel.py
files/: embedDictionary.py  linkDescription.py  linkEmbed.json
functions/: classes.py  embed.py  userClass.py
voiceLevels/: Ahmet Çağatay-429983106779447317.txt  Ahmet-474716359373357077.txt  Ali Sevgi-513081988039704616.txt  Atlas ☠-423324003533324291.txt  Bazzars-276066808887508992.txt  Bryondr-143838398803738624.txt  Dantès-730392517526290442.txt  DrakenLoze-219589873571594243.txt  ERDEMON-350179423762513921.txt  Emin Yiğit-659112488041971732.txt  Engincan-639156004596219924.txt  Eren.-443678598021382155.txt  Fabalu-315087269453365249.txt  Furcify-659112488041971732.txt  Gambur-Sülük-566663439351545873.txt  Genius But Not Working-585760822072967198.txt  HyperV-443448669488939018.txt  Kenan Aktas-420938605951844353.txt  Kerem-600037804201869341.txt  Lawe-204657843914276864.txt  MERVEGÜL-742483385036832849.txt  Mehmet + Furkan-699197675542806559.txt  (+33 more)
(+95 files in other folders)
