[tool.poetry]
name = "colonist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
discord-ui = "^5.0.2"
Flask = "^2.0.2"
discord-py-slash-command = "^3.0.1"
discord-slash-components = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
